Protect inline chunks with empty results
Inline code without results are replaced with zero-width joining spaces.

Closes #6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(redoc_example_rmd)
 export(redoc_extract_rmd)
 export(undoc)
 importFrom(knitr,all_patterns)
+importFrom(knitr,knit_global)
+importFrom(knitr,knit_print)
+importFrom(knitr,opts_chunk)
 importFrom(knitr,opts_knit)
 importFrom(mime,guess_type)
 importFrom(officer,read_docx)
@@ -24,6 +27,7 @@ importFrom(stringi,stri_replace_first_fixed)
 importFrom(stringi,stri_split_lines1)
 importFrom(stringi,stri_trim_both)
 importFrom(tools,file_path_sans_ext)
+importFrom(xfun,parse_only)
 importFrom(xml2,read_xml)
 importFrom(xml2,write_xml)
 importFrom(xml2,xml_add_child)
