Add margin sizing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,5 +31,6 @@ importFrom(xfun,parse_only)
 importFrom(xml2,read_xml)
 importFrom(xml2,write_xml)
 importFrom(xml2,xml_add_child)
+importFrom(xml2,xml_child)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_set_attrs)
