Add Critic Markup processing
Thanks @sctyner and @zachary-foster for much helpful
code from trackmd!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,11 +21,13 @@ Imports:
     rmarkdown,
     officer,
     tools,
+    utils,
     knitr,
     xfun,
     mime,
     stringi,
     xml2,
-    backports
+    backports,
+    whoami
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
