--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,15 @@ importFrom(stringi,stri_detect_fixed)
 importFrom(stringi,stri_detect_regex)
 importFrom(stringi,stri_locate_all_regex)
 importFrom(stringi,stri_match_all_regex)
+importFrom(stringi,stri_opts_regex)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_fixed)
 importFrom(stringi,stri_split_lines1)
 importFrom(stringi,stri_trim_both)
 importFrom(tools,file_path_sans_ext)
+importFrom(whoami,fullname)
+importFrom(whoami,username)
 importFrom(xfun,parse_only)
 importFrom(xml2,read_xml)
 importFrom(xml2,write_xml)
