--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,16 @@ install:
 
 cache:
   - C:\RLibrary
+  - C:\Program Files (x86)\Pandoc\
+
+# Attempt to update pandoc
+before_test:
+  - ps: >-
+      if (-Not (Test-Path "C:\Program Files (x86)\Pandoc\")) {
+        cinst pandoc
+      }
+  - ps: $env:Path += ";C:\Program Files (x86)\Pandoc\"
+  - pandoc -v
 
 # Adapt as necessary starting from here
 
