Handle YAML in header and elsewhere in document
Closes #9, Closes #2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports:
     stringi,
     xml2,
     backports,
-    whoami
+    whoami,
+    yaml
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
