--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,12 +20,15 @@ importFrom(rmarkdown,pandoc_convert)
 importFrom(rmarkdown,word_document)
 importFrom(stringi,stri_detect_fixed)
 importFrom(stringi,stri_detect_regex)
+importFrom(stringi,stri_extract_first_regex)
+importFrom(stringi,stri_join)
 importFrom(stringi,stri_locate_all_regex)
 importFrom(stringi,stri_match_all_regex)
 importFrom(stringi,stri_opts_regex)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_fixed)
+importFrom(stringi,stri_replace_first_regex)
 importFrom(stringi,stri_split_lines1)
 importFrom(stringi,stri_trim_both)
 importFrom(tools,file_path_sans_ext)
@@ -38,3 +41,5 @@ importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_child)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_set_attrs)
+importFrom(yaml,as.yaml)
+importFrom(yaml,yaml.load)
