--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,11 +20,11 @@ importFrom(rmarkdown,pandoc_convert)
 importFrom(rmarkdown,word_document)
 importFrom(stringi,stri_detect_fixed)
 importFrom(stringi,stri_detect_regex)
+importFrom(stringi,stri_extract_all_regex)
 importFrom(stringi,stri_extract_first_regex)
 importFrom(stringi,stri_join)
 importFrom(stringi,stri_locate_all_regex)
 importFrom(stringi,stri_match_all_regex)
-importFrom(stringi,stri_opts_regex)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_fixed)
