--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Suggests:
     rstudioapi
 Remotes:
     davidgohel/officer,
-    brodieG/diffobj,
+    brodieG/diffobj@development,
     r-lib/pkgdown
 SystemRequirements: pandoc (>= 2.1.2) - http://pandoc.org
 VignetteBuilder: knitr
